--- a/buttons.html
+++ b/buttons.html
@@ -1,9 +1,44 @@
 <style>
-  button {
-    background-color: red;
+  .subscribe-button {
+    background-color: rgb(197, 0, 0);
     color: white;
     border: none;
+    height: 36px;
+    width: 105px;
+    border-radius: 2px;
+    cursor: pointer;
+    margin-right: 8px;
   }
+
+  .join-button {
+    background-color: rgb(255, 255, 255);
+    color: rgb(0, 145, 255);
+    border-color: rgb(0, 145, 255);
+    border-style: solid;
+    border-width: 1px;
+    height: 36px;
+    width: 60px;
+    border-radius: 2px;
+    cursor: pointer;
+    margin-right: 8px;
+  }
+
+  .tweet-button {
+    background-color: rgb(0, 145, 255);
+    color: white;
+    border: none;
+    height: 36px;
+    width: 74px;
+    border-radius: 18px;
+    cursor: pointer;
+    font-weight: bold;
+    font-size: 15px;
+  }
+
+
+
 </style>
 
-<button>SUBSCRIBE</button>
+<button class="subscribe-button">SUBSCRIBE</button>
+<button class="join-button">JOIN</button>
+<button class="tweet-button">Tweet</button>
