--- a/buttons.html
+++ b/buttons.html
@@ -3,12 +3,15 @@
     background-color: rgb(197, 0, 0);
     color: white;
     border: none;
-    height: 36px;
-    width: 105px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 16px;
+    padding-right: 16px;
     border-radius: 2px;
     cursor: pointer;
     margin-right: 8px;
     transition: opacity 0.15s;
+    vertical-align: top;
   }
 
   .subscribe-button:hover {
@@ -21,20 +24,23 @@
 
   .join-button {
     background-color: rgb(255, 255, 255);
-    color: rgb(0, 145, 255);
-    border-color: rgb(0, 145, 255);
+    color: rgb(6, 95, 212);
+    border-color: rgb(6, 95, 212);
     border-style: solid;
     border-width: 1px;
-    height: 36px;
-    width: 60px;
+    padding-top: 9px;
+    padding-bottom: 9px;
+    padding-left: 16px;
+    padding-right: 16px;
     border-radius: 2px;
     cursor: pointer;
     margin-right: 8px;
     transition: background-color 0.15s, color 0.15s;
+    vertical-align: top;
   }
 
   .join-button:hover {
-    background-color: rgb(0, 145, 255);
+    background-color: rgb(6, 95, 212);
     color: white;
   }
 
@@ -43,16 +49,19 @@
   }
 
   .tweet-button {
-    background-color: rgb(0, 145, 255);
+    background-color: rgb(29, 155, 240);
     color: white;
     border: none;
-    height: 36px;
-    width: 74px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 16px;
+    padding-right: 16px;
     border-radius: 18px;
     cursor: pointer;
     font-weight: bold;
     font-size: 15px;
     transition: box-shadow 0.15s;
+    vertical-align: top;
   }
 
   .tweet-button:hover {
