made some updates

--- a/index.html
+++ b/index.html
@@ -1,12 +1,23 @@
-<p>
-  anirudh kaushal
-</p>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Anirudh Kaushal</title>
 
-<button>
-  Hello
-</button>
+  </head>
 
-<!-- anchor element -->
-<a href="https://www.youtube.com/" target="_blank">
-  Link to youtube
-</a>
+  <body>
+    <p>
+      anirudh kaushal is my name. I want to be hardest working person in the whole worlds.
+    </p>
+    
+    <button>
+      Hello
+    </button>
+    
+    <!-- anchor element -->
+    <a href="https://www.youtube.com/" target="_blank">
+      Link to youtube
+    </a>
+  </body>
+
+</html>
