--- a/buttons.html
+++ b/buttons.html
@@ -1,75 +1,16 @@
-<style>
-  .subscribe-button {
-    background-color: rgb(197, 0, 0);
-    color: white;
-    border: none;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    padding-left: 16px;
-    padding-right: 16px;
-    border-radius: 2px;
-    cursor: pointer;
-    margin-right: 8px;
-    transition: opacity 0.15s;
-    vertical-align: top;
-  }
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Buttons Practice</title>
+    <link rel="stylesheet" href="styles/buttons.css">
+  </head>
 
-  .subscribe-button:hover {
-    opacity: 0.8;
-  }
+  <body>
+    <button class="subscribe-button">SUBSCRIBE</button>
+    <button class="join-button">JOIN</button>
+    <button class="tweet-button">Tweet</button>
+  </body>
+</html>
 
-  .subscribe-button:active {
-    opacity: 0.3;
-  }
 
-  .join-button {
-    background-color: rgb(255, 255, 255);
-    color: rgb(6, 95, 212);
-    border-color: rgb(6, 95, 212);
-    border-style: solid;
-    border-width: 1px;
-    padding-top: 9px;
-    padding-bottom: 9px;
-    padding-left: 16px;
-    padding-right: 16px;
-    border-radius: 2px;
-    cursor: pointer;
-    margin-right: 8px;
-    transition: background-color 0.15s, color 0.15s;
-    vertical-align: top;
-  }
 
-  .join-button:hover {
-    background-color: rgb(6, 95, 212);
-    color: white;
-  }
-
-  .join-button:active {
-    opacity: 0.7;
-  }
-
-  .tweet-button {
-    background-color: rgb(29, 155, 240);
-    color: white;
-    border: none;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    padding-left: 16px;
-    padding-right: 16px;
-    border-radius: 18px;
-    cursor: pointer;
-    font-weight: bold;
-    font-size: 15px;
-    transition: box-shadow 0.15s;
-    vertical-align: top;
-  }
-
-  .tweet-button:hover {
-    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.15);
-  }
-
-</style>
-
-<button class="subscribe-button">SUBSCRIBE</button>
-<button class="join-button">JOIN</button>
-<button class="tweet-button">Tweet</button>
