--- a/lesson4_exercise.html
+++ b/lesson4_exercise.html
@@ -1,167 +1,40 @@
-<style>
-  .back-button {
-    margin-right: 8px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-  }
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Lesson 4 - exercise</title>
 
-  .next-button {
-    margin-left: 3px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-  }
+    <link rel="stylesheet" href="styles/lesson4_exercise.css">
 
-  .link {
-    margin-right: 5px;
-  }
+  </head>
 
-  .stretch-button {
-    background-color: green;
-    color: white;
-    border: none;
-    padding-top: 6px;
-    padding-bottom: 6px;
-    padding-left: 10px;
-    padding-right: 10px;
-    cursor: pointer;
-    transition: padding-top 0.5s, padding-bottom 0.5s, padding-left 0.5s, padding-right 0.5s;
-  }
+  <body>
+    <button class="back-button">Back</button>
+    <a href="1.html" class="link">1</a>
+    <a href="2.html" class="link">2</a>
+    <a href="3.html" class="link">3</a>
+    <a href="4.html" class="link">4</a>
+    <a href="5.html" class="link">5</a>
+    <button class="next-button">Next</button>
 
-  .stretch-button:hover {
-    padding-top: 10px;
-    padding-bottom: 10px;
-    padding-left: 16px;
-    padding-right: 16px;
-  }
+    <p>next one below</p>
 
-  .shadow-button {
-    background-color: green;
-    color: white;
-    border: none;
-    padding-top: 6px;
-    padding-bottom: 6px;
-    padding-left: 10px;
-    padding-right: 10px;
-    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-    cursor: pointer;
-  }
+    <button class="stretch-button">Stretch</button>
 
-  .shadow-button:active {
-    margin-left: 2px;
-    margin-top: 2px;
-    box-shadow: none;
-  }
+    <p>next one below</p>
 
-  /* .one-btn {
-    background-color: green;
-    color: white;
-    border: none;
-    padding-top: 6px;
-    padding-bottom: 6px;
-    padding-left: 10px;
-    padding-right: 10px;
-    margin-left: 20px;
-    margin-right: 10px;
-    cursor: pointer;
-    transition: padding-left 0.3s, padding-right 0.3s, margin-left 0.3s, margin-right 0.3s;
-  }
+    <button class="shadow-button">Shadow</button>
 
-  .one-btn:hover {
-    padding-left: 16px;
-    padding-right: 16px;
-    margin-left: 14px;
-    margin-right: 4px;
-  }
+    <p>next one below</p>
 
-  .two-btn {
-    background-color: green;
-    color: white;
-    border: none;
-    padding-top: 6px;
-    padding-bottom: 6px;
-    padding-left: 10px;
-    padding-right: 10px;
-    margin-left: 10px;
-    margin-right: 10px;
-    cursor: pointer;
-    transition: padding-left 0.3s, padding-right 0.3s, margin-left 0.3s, margin-right 0.3s;
-  }
-
-  .two-btn:hover {
-    padding-left: 16px;
-    padding-right: 16px;
-    margin-left: 4px;
-    margin-right: 4px;
-  }
-
-  .three-btn {
-    background-color: green;
-    color: white;
-    border: none;
-    padding-top: 6px;
-    padding-bottom: 6px;
-    padding-left: 10px;
-    padding-right: 10px;
-    margin-left: 10px;
-    margin-right: 20px;
-    cursor: pointer;
-    transition: padding-left 0.3s, padding-right 0.3s, margin-left 0.3s, margin-right 0.3s;
-
-  }
-
-  .three-btn:hover {
-    padding-left: 16px;
-    padding-right: 16px;
-    margin-left: 4px;
-    margin-right: 14px;
-  } */
-
-  .one-two-three-btn {
-    background-color: green;
-    color: white;
-    border: none;
-    padding-top: 8px;
-    padding-bottom: 8px;
-    padding-left: 15px;
-    padding-right: 15px;
-    margin-left: 10px;
-    margin-right: 10px;
-    cursor: pointer;
-    transition: padding 0.15s, margin 0.15s;
-  }
-
-  .one-two-three-btn:hover {
-    padding-left: 25px;
-    padding-right: 25px;
-    margin-left: 0px;
-    margin-right: 0px;
-  }
+    <button class="one-two-three-btn">One</button>
+    <button class="one-two-three-btn">Two</button>
+    <button class="one-two-three-btn">Three</button>
+    
+  </body>
+</html>
 
 
-</style>
 
-
-<button class="back-button">Back</button>
-<a href="1.html" class="link">1</a>
-<a href="2.html" class="link">2</a>
-<a href="3.html" class="link">3</a>
-<a href="4.html" class="link">4</a>
-<a href="5.html" class="link">5</a>
-<button class="next-button">Next</button>
-
-<p>next one below</p>
-
-<button class="stretch-button">Stretch</button>
-
-<p>next one below</p>
-
-<button class="shadow-button">Shadow</button>
-
-<p>next one below</p>
-
-<button class="one-two-three-btn">One</button>
-<button class="one-two-three-btn">Two</button>
-<button class="one-two-three-btn">Three</button>
 
 
 
