--- a/lesson1_exercise.html
+++ b/lesson1_exercise.html
@@ -1,22 +1,33 @@
-<button>Click</button>
+<!DOCTYPE html>
+<html>
+    <head>
+      <title>Lesson 1 - exercise</title>
+    </head>
 
-<button>Anirudh</button>
-<button>chocolate</button>
+    <body>
+        <button>Click</button>
+        <button>Anirudh</button>
+        <button>chocolate</button>
 
-<p>Hello, World!</p>
+        <p>Hello, World!</p>
 
-<p>Today I made some breakfast for myself.</p>
+        <p>Today I made some breakfast for myself.</p>
 
-<a href="https://www.amazon.in/" target="_blank">Link to amazon</a>
+        <a href="https://www.amazon.in/" target="_blank">Link to amazon</a>
 
-<a href="https://www.amazon.in/" target="_blank">Back to Amazon</a>
+        <a href="https://www.amazon.in/" target="_blank">Back to Amazon</a>
 
-<p>Nike Black Running Shoes</p>
+        <p>Nike Black Running Shoes</p>
 
-<p>$39 - in stock</p>
+        <p>$39 - in stock</p>
 
-<p>Free delivery tomorrow</p>
+        <p>Free delivery tomorrow</p>
 
-<button>Add to Cart</button>
-<button>Buy now</button>
+        <button>Add to Cart</button>
+        <button>Buy now</button> 
+    </body>
+</html>
+
+
+
 
