--- a/lesson2_exercise.html
+++ b/lesson2_exercise.html
@@ -1,150 +1,38 @@
-<style>
-  .uber-button {
-    background-color: rgb(0, 0, 0);
-    color: white;
-    border: none;
-    height: 36px;
-    width: 120px;
-    cursor: pointer;
-  }
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Lesson 2 - exercise</title>
 
-  .amazon-button {
-    background-color: rgb(255, 216, 20);
-    color: black;
-    border: none;
-    height: 36px;
-    width: 180px;
-    border-radius: 18px;
-    cursor: pointer;
-    font-size: 15px;
-    margin-left: 8px;
-  }
+    <link rel="stylesheet" href="styles/lesson2_exercise.css">
 
-  .github-button {
-    background-color: rgb(46, 164, 79);
-    color: white;
-    border: none;
-    height: 36px;
-    width: 100px;
-    border-radius: 8px;
-    cursor: pointer;
-    font-weight: bold;
-    font-size: 15px;
-    margin-left: 8px;
-  }
+  </head>
 
-  .bootstrap-first-button {
-    background-color: rgb(121, 82, 179);
-    color: white;
-    border: none;
-    height: 36px;
-    width: 120px;
-    border-radius: 4px;
-    cursor: pointer;
-    font-weight: bold;
-    margin-left: 8px;
-  }
+  <body>
+    <button class="uber-button">Request now</button>
+    <button class="amazon-button">Add to Cart</button>
+    <button class="github-button">Sign up</button>
+    <button class="bootstrap-first-button">Get started</button>
+    <button class="bootstrap-second-button">Download</button>
+    <button class="linkedin-first-button">Apply on company website</button>
+    <button class="linkedin-second-button">Save</button>
 
-  .bootstrap-second-button {
-    background-color: white;
-    color: rgb(108, 117, 125);
-    border-color: rgb(108, 117, 125);
-    border-style: solid;
-    border-width: 1px;
-    border-radius: 4px;
-    height: 36px;
-    width: 120px;
-    cursor: pointer;
-    font-weight: bold;
-    margin-left: 8px;
-  }
+    <p>next exercise below</p>
+    <p>from down here, it starts</p>
 
-  .linkedin-first-button {
-    background-color: rgb(10, 102, 194);
-    color: white;
-    border: none;
-    height: 36px;
-    width: 220px;
-    border-radius: 18px;
-    cursor: pointer;
-    font-weight: 600;
-    margin-left: 8px;
-  }
+    <a href="https://www.amazon.in/" target="_blank" class="back-link">Back to Amazon</a>
 
-  .linkedin-second-button {
-    background-color: white;
-    color: rgb(10, 102, 194);
-    border-color: rgb(10, 102, 194);
-    border-style: solid;
-    border-width: 1px;
-    height: 36px;
-    width: 80px;
-    border-radius: 18px;
-    cursor: pointer;
-    font-weight: 600;
-    margin-left: 8px;
-  }
+    <p class="product-name">Nike Black Running Shoes</p>
 
-  .back-link {
-    color: rgb(0, 113, 133);
-  }
+    <p class="product-info">$39 - in stock.</p>
 
-  .product-name {
-    margin-top: 20px;
-    font-size: 20px;
-    font-weight: bold;
-    margin-bottom: 20px;
-  }
+    <p>Free delivery tomorrow.</p>
 
-  .product-info {
-    color: rgb(0, 118, 0);
-    font-weight: bold;
-  }
-
-  .add-to-cart-btn {
-    background-color: rgb(255, 216, 20);
-    color: black;
-    border: none;
-    height: 30px;
-    width: 120px;
-    border-radius: 15px;
-    cursor: pointer;
-    margin-right: 8px;
-  }
-
-  .buy-now-btn {
-    background-color: rgb(255, 164, 28);
-    color: black;
-    border: none;
-    height: 30px;
-    width: 120px;
-    border-radius: 15px;
-    cursor: pointer;
-  }
-
-  
-</style>
+    <button class="add-to-cart-btn">Add to Cart</button>
+    <button class="buy-now-btn">Buy now</button>
+    
+  </body>
+</html>
 
 
-<button class="uber-button">Request now</button>
-<button class="amazon-button">Add to Cart</button>
-<button class="github-button">Sign up</button>
-<button class="bootstrap-first-button">Get started</button>
-<button class="bootstrap-second-button">Download</button>
-<button class="linkedin-first-button">Apply on company website</button>
-<button class="linkedin-second-button">Save</button>
 
-<p>next exercise below</p>
-<p>from down here, it starts</p>
-
-<a href="https://www.amazon.in/" target="_blank" class="back-link">Back to Amazon</a>
-
-<p class="product-name">Nike Black Running Shoes</p>
-
-<p class="product-info">$39 - in stock.</p>
-
-<p>Free delivery tomorrow.</p>
-
-<button class="add-to-cart-btn">Add to Cart</button>
-<button class="buy-now-btn">Buy now</button>
 
