--- a/lesson5_exercise.html
+++ b/lesson5_exercise.html
@@ -1,276 +1,82 @@
-<style>
-  p {
-    margin-top: 0;
-    margin-bottom: 0;
-  }
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Lesson 5 - exercise</title>
+    <link rel="stylesheet" href="styles/lesson5_exercise.css">
+  </head>
 
-  .exer_a {
-    font-family: Tahoma;
-    font-weight: bold;
-    font-size: 30px;
-    margin-bottom: 30px;
-  }
+  <body>
+    <p class="exer_a">This is Tahoma Font</p>
 
-  .biggest_deals {
-    font-family: Arial;
-    font-weight: bold;
-    font-size: 30px;
-  }
+    <p class="biggest_deals">
+      Biggest Deals of the Year!
+    </p>
+    <p class="sales_end">
+      Sales end Tuesday
+    </p>
 
-  .sales_end {
-    font-family: Arial;
-    font-style: italic;
-    color: red;
-    margin-bottom: 30px;
-  }
-
-  .course-title {
-    font-family: Verdana;
-    font-weight: bold;
-  }
-
-  .course-level {
-    font-family: Verdana;
-    color: rgb(96, 96, 96);
-    font-size: 15px;
-    margin-bottom: 15px;
-  }
-
-  .course-desp {
-    font-family: Verdana;
-    width: 280px;
-    font-size: 15px;
-    margin-bottom: 15px;
-  }
-
-  .get-started-btn {
-    background-color: green;
-    color: white;
-    font-size: 12px;
-    font-family: Verdana;
-    border: none;
-    border-radius: 4px;
-    padding-top: 8px;
-    padding-bottom: 8px;
-    padding-left: 16px;
-    padding-right: 16px;
-    cursor: pointer;
-    margin-bottom: 30px;
-  }
-
-  .title {
-    font-family: Arial;
-    font-weight: bold;
-    font-size: 25px;
-    text-align: center;
-    margin-bottom: 12px;
-  }
-
-  .mid-text {
-    font-family: Arial;
-    font-size: 15px;
-    text-align: center;
-    margin-bottom: 12px;
-  }
-
-  .link {
-    font-family: Arial;
-    font-size: 15px;
-    color: blue;
-    text-align: center;
-    cursor: pointer;
-    margin-bottom: 30px;
-  }
-
-  .link:hover {
-    text-decoration: underline;
-  }
-
-  .apple-line-1 {
-    font-family: Arial;
-    color: rgb(245, 99, 0);
-    text-align: center;
-    /* font-weight: bold; */
-    margin-bottom: 8px;
-  }
-
-  .apple-line-2 {
-    font-family: Arial;
-    font-size: 22px;
-    font-weight: bold;
-    text-align: center;
-    margin-bottom: 8px;
-  }
-
-  .apple-line-3 {
-    font-family: Arial;
-    font-size: 36px;
-    font-weight: bold;
-    text-align: center;
-    margin-bottom: 10px;
-  }
-
-  .apple-line-4 {
-    font-family: Arial;
-    text-align: center;
-    margin-bottom: 20px;
-  }
-
-  .apple-line-5 {
-    font-family: Arial;
-    text-align: center;
-    margin-bottom: 30px;
-  }
-
-  .apple-buy-btn {
-    background-color: rgb(0, 113, 227);
-    color: white;
-    font-weight: bold;
-    font-size: 12px;
-    padding-top: 8px;
-    padding-bottom: 8px;
-    padding-left: 12px;
-    padding-right: 12px;
-    border-radius: 24px;
-    cursor: pointer;
-  }
-
-  .stock-l1 {
-    font-family: Arial;
-    margin-bottom: 5px;
-  }
-
-  .amount {
-    font-size: 20px;
-  }
-
-  .currency {
-    font-size: 12px;
-    color: rgb(96, 96, 96);
-  }
-
-  .stock-l2 {
-    font-family: Arial;
-    color: green;
-    font-size: 12px;
-    margin-bottom: 5px;
-  }
-
-  .stock-l3 {
-    font-family: Arial;
-    font-size: 12px;
-    margin-bottom: 30px;
-  }
-
-  .left-text {
-    color: rgb(96, 96, 96);
-  }
-
-  .right-text {
-    color: red;
-  }
-
-  .fcc_l1 {
-    font-family: Arial;
-    margin-bottom: 5px;
-  }
-
-  .twitter_handle {
-    font-weight: bold;
-  }
-
-  .tweet_info {
-    color: rgb(96, 96, 96);
-  }
-
-  .fcc_l2 {
-    font-family: Arial;
-    width: 500px;
-    margin-bottom: 15px;
-  }
-
-  .fcc_l3 {
-    font-family: Arial;
-  }
-
-  .link_at {
-    color: rgb(29, 155, 240);
-    cursor: pointer;
-  }
+    <p class="course-title">
+      HTML CSS Course
+    </p>
+    <p class="course-level">
+      Beginner to Pro
+    </p>
+    <p class="course-desp">
+      In this course, we'll learn the skills you need to become a developer.
+    </p>
+    <button class="get-started-btn">Get Started</button>
 
 
+    <p class="title">
+      Shopping for your business?
+    </p>
+    <p class="mid-text">
+      See how Apple at Work can help.
+    </p>
+    <p class="link">
+      Learn more &gt;
+    </p>
 
 
-
-</style>
-
-
-<p class="exer_a">This is Tahoma Font</p>
-
-<p class="biggest_deals">
-  Biggest Deals of the Year!
-</p>
-<p class="sales_end">
-  Sales end Tuesday
-</p>
-
-<p class="course-title">
-  HTML CSS Course
-</p>
-<p class="course-level">
-  Beginner to Pro
-</p>
-<p class="course-desp">
-  In this course, we'll learn the skills you need to become a developer.
-</p>
-<button class="get-started-btn">Get Started</button>
+    <p class="apple-line-1">
+      New
+    </p>
+    <p class="apple-line-2">
+      MacBook Pro
+    </p>
+    <p class="apple-line-3">
+      Supercharged for pros.
+    </p>
+    <p class="apple-line-4">
+      From &#36;1999
+    </p>
+    <p class="apple-line-5">
+      <span class="apple-buy-btn">Buy</span>
+    </p>
 
 
-<p class="title">
-  Shopping for your business?
-</p>
-<p class="mid-text">
-  See how Apple at Work can help.
-</p>
-<p class="link">
-  Learn more &gt;
-</p>
+    <p class="stock-l1">
+      <span class="amount">1,049.61</span> <span class="currency">USD</span>
+    </p>
+    <p class="stock-l2">
+      +18.05 (1.75%) today
+    </p>
+    <p class="stock-l3">
+      <span class="left-text">After hours 1,048.00</span> <span class="right-text">-1.61 (0.15%)</span>
+    </p>
 
 
-<p class="apple-line-1">
-  New
-</p>
-<p class="apple-line-2">
-  MacBook Pro
-</p>
-<p class="apple-line-3">
-  Supercharged for pros.
-</p>
-<p class="apple-line-4">
-  From &#36;1999
-</p>
-<p class="apple-line-5">
-  <span class="apple-buy-btn">Buy</span>
-</p>
+    <p class="fcc_l1">
+      <span class="twitter_handle">freeCodeCamp.org</span> <span class="tweet_info">@freeCodeCamp 1h</span>
+    </p>
+    <p class="fcc_l2">
+      As a web developer, you'll want to make your projects easy to use and navigate around.
+    </p>
+    <p class="fcc_l3">
+      Here <span class="link_at">@chp_it</span> outlines the top skills new developers should have.
+    </p>
+    
+  </body>
+</html>
 
 
-<p class="stock-l1">
-  <span class="amount">1,049.61</span> <span class="currency">USD</span>
-</p>
-<p class="stock-l2">
-  +18.05 (1.75%) today
-</p>
-<p class="stock-l3">
-  <span class="left-text">After hours 1,048.00</span> <span class="right-text">-1.61 (0.15%)</span>
-</p>
-
-
-<p class="fcc_l1">
-  <span class="twitter_handle">freeCodeCamp.org</span> <span class="tweet_info">@freeCodeCamp 1h</span>
-</p>
-<p class="fcc_l2">
-  As a web developer, you'll want to make your projects easy to use and navigate around.
-</p>
-<p class="fcc_l3">
-  Here <span class="link_at">@chp_it</span> outlines the top skills new developers should have.
-</p>
