--- a/intro-to-html/lesson7_exercise.html
+++ b/intro-to-html/lesson7_exercise.html
@@ -21,11 +21,23 @@
 
       <p class="next_one">next one</p>
 
-      <p>Email</p>
+      <p class="linkedin-line-1">Email</p>
 
-      <input type="text">
+      <input class="linkedin-line-2" type="text">
 
-      <p>By clicking Agree & Join, you agree to the Privacy Policy.</p>
+      <p class="linkedin-line-3">By clicking Agree & Join, you agree to the Privacy Policy.</p>
+
+      <p class="linkedin-line-4">
+        <button class="linkedin-join-btn">Agree & Join</button>
+      </p>
+
+      <p class="next_one">next one</p>
+
+      <img class="tw-profile-pic" src="spiderman.jpeg" alt="spiderman">
+
+      <input class="tw-tweet" type="text" placeholder="What's happening?">
+
+      <button class="tw-tweet-btn">Tweet</button>
 
 
     </body>
