added some updates

--- a/intro-to-html/lesson7_exercise.html
+++ b/intro-to-html/lesson7_exercise.html
@@ -7,11 +7,11 @@
     </head>
 
     <body>
-      <img class="img1" src="spiderman.jpeg">
+      <img class="img1" src="images/spiderman.jpeg">
 
-      <img class="img2" src="spiderman.jpeg">
+      <img class="img2" src="images/spiderman.jpeg">
 
-      <img class="img3" src="spiderman.jpeg">
+      <img class="img3" src="images/spiderman.jpeg">
 
       <input class="input1" type="text" placeholder="Search">
 
@@ -33,7 +33,7 @@
 
       <p class="next_one">next one</p>
 
-      <img class="tw-profile-pic" src="spiderman.jpeg" alt="spiderman">
+      <img class="tw-profile-pic" src="images/spiderman.jpeg" alt="spiderman">
 
       <input class="tw-tweet" type="text" placeholder="What's happening?">
 
