--- a/intro-to-html/lesson8_exercise.html
+++ b/intro-to-html/lesson8_exercise.html
@@ -31,6 +31,14 @@
         <input class="ip-email" type="email" placeholder="Email">
         <button class="sign-up-btn">Sign Up</button>
 
+        <p class="next_one">next one</p>
+
+        <p class="uber-head" >Request a ride now</p>
+        <input class="uber-ip-1" type="text" placeholder="Enter pickup location">
+        <input class="uber-ip-2" type="text" placeholder="Enter destination">
+        <button class="uber-btn-1">Request now</button>
+        <button class="uber-btn-2">Schedule for later</button>
+
 
 
     </body>
