--- a/youtube.html
+++ b/youtube.html
@@ -11,8 +11,8 @@
       }
 
       .search-bar {
-        /* font-size: 20px;
-        margin-left: 12px; */
+        font-size: 20px;
+        margin-left: 12px;
       }
 
       .video-title {
