--- a/youtube.html
+++ b/youtube.html
@@ -3,7 +3,18 @@
   <head>
     <title>YouTube 2.0</title>
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+
     <style>
+
+      p {
+        font-family: Roboto, Arial;
+        margin-top: 0;
+        margin-bottom: 0;
+      }
+
       .thumbnail {
         width: 300px;
         display: block;
@@ -16,7 +27,10 @@
       }
 
       .video-title {
-        width: 300px;
+        font-size: 14px;
+        font-weight: 500;
+        line-height: 20px;
+        margin-bottom: 12px;
       }
 
       .video-preview {
@@ -26,6 +40,35 @@
         margin-right: 15px;
       }
 
+      .channel-picture {
+        display: inline-block;
+        width: 50px;
+        vertical-align: top;
+      }
+
+      .video-info {
+        display: inline-block;
+        width: 200px;
+      }
+
+      .profile-picture {
+        width: 40px;
+        border-radius: 25px;
+      }
+
+      .thumbnail-row {
+        margin-bottom: 12px;
+      }
+
+      .video-author,
+      .video-stats {
+        font-size: 12px;
+        color: rgb(96, 96, 96);
+      }
+
+      .video-author {
+        margin-bottom: 4px;
+      }
 
     </style>
 
@@ -36,31 +79,52 @@
     <input class="search-bar" type="text" placeholder="Search">
 
     <div class="video-preview">
-      <img class="thumbnail" src="thumbnails/thumbnail-1.webp">
+      <div class="thumbnail-row">
+        <img class="thumbnail" src="thumbnails/thumbnail-1.webp">
+      </div>
 
-      <p class="video-title">
-        Talking Tech and AI with Google CEO Sundar Pichai!
-      </p>
-      <p class="video-author">
-        Marques Brownlee
-      </p>
-      <p class="video-stats">
-        3.4M views &#183; 6 months ago
-      </p>      
+      <div>
+        <div class="channel-picture">
+          <img class="profile-picture" src="channel-pictures/channel-1.jpeg" alt="channel-1-pic">
+        </div>
+
+        <div class="video-info">
+          <p class="video-title">
+            Talking Tech and AI with Google CEO Sundar Pichai!
+          </p>
+          <p class="video-author">
+            Marques Brownlee
+          </p>
+          <p class="video-stats">
+            3.4M views &#183; 6 months ago
+          </p> 
+        </div>
+      </div>    
     </div>
 
     <div class="video-preview">
-      <img class="thumbnail" src="thumbnails/thumbnail-2.webp">
+      <div class="thumbnail-row">
+        <img class="thumbnail" src="thumbnails/thumbnail-2.webp">
+      </div>
 
-      <p class="video-title">
-        Try Not To Laugh Challenge #9
-      </p>
-      <p class="video-author">
-        Markiplier
-      </p>
-      <p class="video-stats">
-        19M views &#183; 4 years ago
-      </p>      
+      <div>
+        <div class="channel-picture">
+          <img class="profile-picture" src="channel-pictures/channel-2.jpeg" alt="channel-2-pic">
+        </div>
+
+        <div class="video-info">
+          <p class="video-title">
+            Try Not To Laugh Challenge #9
+          </p>
+          <p class="video-author">
+            Markiplier
+          </p>
+          <p class="video-stats">
+            19M views &#183; 4 years ago
+          </p> 
+        </div>
+      </div>
+        
     </div>
     
   </body>
