learnt about grid in css

--- a/youtube.html
+++ b/youtube.html
@@ -44,11 +44,13 @@
         display: inline-block;
         width: 50px;
         vertical-align: top;
+        background-color: lightgray;
       }
 
       .video-info {
         display: inline-block;
         width: 200px;
+        background-color: lightgray;
       }
 
       .profile-picture {
