--- a/youtube.html
+++ b/youtube.html
@@ -17,15 +17,21 @@
     <div class="header">
 
       <div class="left-section">
-        left section
+        <img class="hamburger-menu" src="icons/hamburger-menu.svg" alt="hamburger-menu-icon">
+        <img class="youtube-logo" src="icons/youtube-logo.svg" alt="youtube-logo-icon">
       </div>
 
       <div class="middle-section">
         <input class="search-bar" type="text" placeholder="Search">
+        <button class="search-btn"><img class="search-icon" src="icons/search.svg" alt="search-icon"></button>
+        <button class="voice-search-btn"><img class="voice-search-icon" src="icons/voice-search-icon.svg" alt="voice-search-icon"></button>
       </div>
 
       <div class="right-section">
-        right section
+        <img class="upload-icon" src="icons/upload.svg" alt="upload-icon">
+        <img class="youtube-apps-icon" src="icons/youtube-apps.svg" alt="youtube-apps-icon">
+        <img class="notifications-icon" src="icons/notifications.svg" alt="notifications-icon">
+        <img class="my-channel-picture" src="channel-pictures/my-channel.jpg" alt="my-channel-picture">
       </div>
 
     </div>
