--- a/intro-to-html/lesson13_exercise.html
+++ b/intro-to-html/lesson13_exercise.html
@@ -7,6 +7,10 @@
 
     <link rel="stylesheet" href="styles/lesson13_exercise.css">
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+
   </head>
 
   <body>
@@ -31,6 +35,120 @@
     </div>
 
     <p class="next-one">next one</p>
+
+    <div class="gmail-inbox">
+      <div class="heading">
+        ALL INBOXES
+      </div>
+      <div class="content">
+        <div class="content-left-section">
+          <img class="profile-picture" src="images/spiderman.jpeg" alt="spiderman">
+        </div>
+        <div class="content-right-section">
+          <div class="sender-info">
+            <p class="sender-name">Chewy Productions</p>
+            <p class="sender-time">4:58 PM</p>
+          </div>
+          <div class="subject">
+            Biggest sales of the year!
+          </div>
+          <div class="email-body">
+            Hey there! We're writing to tell you about our...
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <p class="next-one">next one</p>
+
+    <div class="gmail-inbox">
+      <div class="heading">
+        ALL INBOXES
+      </div>
+      <div class="content">
+        <div class="content-left-section">
+          <img class="profile-picture" src="images/spiderman.jpeg" alt="spiderman">
+        </div>
+        <div class="content-right-section">
+          <div class="sender-info">
+            <p class="sender-name">Chewy Productions</p>
+            <p class="sender-time">4:58 PM</p>
+          </div>
+          <div class="subject">
+            Biggest sales of the year!
+          </div>
+          <div class="email-body">
+            Hey there! We're writing to tell you about our...
+          </div>
+        </div>
+      </div>
+
+      <div class="content">
+        <div class="content-left-section">
+          <img class="profile-picture" src="images/ironman.jpeg" alt="ironman">
+        </div>
+        <div class="content-right-section">
+          <div class="sender-info">
+            <p class="sender-name">Netflix</p>
+            <p class="sender-time">12:05 PM</p>
+          </div>
+          <div class="subject">
+            Here's what's coming soon to Netflix
+          </div>
+          <div class="email-body">
+            Brand new movies and shows, old favorites...
+          </div>
+        </div>
+      </div>
+
+      <div class="content">
+        <div class="content-left-section">
+          <img class="profile-picture" src="images/doctorstrange.jpeg" alt="doctorstrange">
+        </div>
+        <div class="content-right-section">
+          <div class="sender-info">
+            <p class="sender-name">Best Buy</p>
+            <p class="sender-time">7:18 AM</p>
+          </div>
+          <div class="subject">
+            Your Best Buy eReceipt
+          </div>
+          <div class="email-body">
+            Thank you for shopping at Best Buy, here is...
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <p class="next-one">next one</p>
+
+    <div class="tweet">
+      <div class="tw-left-section">
+        <img class="tw-profile-picture" src="images/spiderman.jpeg" alt="spiderman">
+      </div>
+      <div class="tw-right-section">
+        <div class="tw-user-info">
+          <div class="tw-username">supersimple.dev</div>
+          <div class="tw-handle">@SuperSimpleDev</div>
+        </div>
+        <div class="tw-content">
+          What is backend web development? A complete overview. New video is up!
+        </div>
+        <div class="tw-video-link-card">
+          <div class="video-link-card-left-section"></div>
+          <div class="video-link-card-right-section">
+            <div class="video-url">
+              youtube.com
+            </div>
+            <div class="video-title">
+              Backend web development - a complete overview (2021)
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
 
     
   </body>
