--- a/position.html
+++ b/position.html
@@ -6,7 +6,8 @@
 
   <body style="
     height: 3000px;
-    padding-top: 60px;  
+    padding-top: 60px;
+    padding-left: 80px;  
   ">
     <div style="
       background-color: black;
@@ -17,6 +18,21 @@
       right: 0;
       height: 50px;
     ">header</div>
+
+    <div style="
+      background-color: green;
+      color: white;
+      width: 72px;
+
+      position: fixed;
+      left: 0;
+      bottom: 0;
+      top: 50px;
+
+    "> 
+      sidebar
+    </div>
+
     <div style="
       background-color: lightblue;
       height: 200px;
