--- a/youtube.html
+++ b/youtube.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="styles/general.css">
     <link rel="stylesheet" href="styles/header.css">
     <link rel="stylesheet" href="styles/video.css">
+    <link rel="stylesheet" href="styles/sidebar.css">
   </head>
 
   <body>
@@ -34,6 +35,10 @@
         <img class="my-channel-picture" src="channel-pictures/my-channel.jpg" alt="my-channel-picture">
       </div>
 
+    </div>
+
+    <div class="sidebar">
+      sidebar
     </div>
 
     <div class="video-grid">
