--- a/position.html
+++ b/position.html
@@ -17,6 +17,7 @@
       left: 0;
       right: 0;
       height: 50px;
+      z-index: 100;
     ">header</div>
 
     <div style="
@@ -30,6 +31,25 @@
       top: 50px;
     "> 
       sidebar
+      <div style="
+        position: absolute;
+        background-color: red;
+        color: white;
+        right: 0;
+        top: 0;
+      ">
+        X
+      </div>
+    </div>
+
+    <div style="
+      position: absolute;
+      background-color: red;
+      color: white;
+      right: 10px;
+      top: 60px;
+    ">
+      absolute
     </div>
 
     <div style="
@@ -42,6 +62,17 @@
      background-color: lightpink;
      height: 200px;
      width: 200px;
-    ">div 2</div>
+     position: relative;
+    ">div 2
+          <div style="
+            position: absolute;
+            background-color: black;
+            color: white;
+            right: 10px;
+            bottom: 10px;
+          ">
+            5:00
+          </div>
+    </div>
   </body>
 </html>
