lesson 15e and 15f exercise completed

--- a/intro-to-html/lesson15e_exercise.html
+++ b/intro-to-html/lesson15e_exercise.html
@@ -18,6 +18,8 @@
         <button class="add-to-cart-btn">Add to Cart</button>
       </div>
     </div>
+
+    <p>this also contains the code for lesson 15f exercise 😃</p>
     
   </body>
 </html>
