--- a/youtube.html
+++ b/youtube.html
@@ -24,16 +24,29 @@
 
       <div class="middle-section">
         <input class="search-bar" type="text" placeholder="Search">
-        <button class="search-btn"><img class="search-icon" src="icons/search.svg" alt="search-icon"></button>
-        <button class="voice-search-btn"><img class="voice-search-icon" src="icons/voice-search-icon.svg" alt="voice-search-icon"></button>
+        <button class="search-btn">
+          <img class="search-icon" src="icons/search.svg" alt="search-icon">
+          <div class="tooltip">Search</div>
+        </button>
+        <button class="voice-search-btn">
+          <img class="voice-search-icon" src="icons/voice-search-icon.svg" alt="voice-search-icon">
+          <div class="tooltip">Search with your voice</div>
+        </button>
       </div>
 
       <div class="right-section">
-        <img class="upload-icon" src="icons/upload.svg" alt="upload-icon">
-        <img class="youtube-apps-icon" src="icons/youtube-apps.svg" alt="youtube-apps-icon">
+        <div class="upload-icon-container">
+          <img class="upload-icon" src="icons/upload.svg" alt="upload-icon">
+          <div class="tooltip">Create</div>
+        </div>
+        <div class="youtube-apps-icon-container">
+          <img class="youtube-apps-icon" src="icons/youtube-apps.svg" alt="youtube-apps-icon">
+          <div class="tooltip">YouTube apps</div>
+        </div>
         <div class="notifications-icon-container">
           <img class="notifications-icon" src="icons/notifications.svg" alt="notifications-icon">
           <div class="notifications-count">3</div>
+          <div class="tooltip">Notifications</div>
         </div>
         <img class="my-channel-picture" src="channel-pictures/my-channel.jpg" alt="my-channel-picture">
       </div>
