--- a/youtube.html
+++ b/youtube.html
@@ -83,7 +83,9 @@
     <div class="video-grid">
       <div class="video-preview">
         <div class="thumbnail-row">
-          <img class="thumbnail" src="thumbnails/thumbnail-1.webp">
+          <a href="https://www.youtube.com/watch?v=n2RNcPRtAiY" target="_blank">
+            <img class="thumbnail" src="thumbnails/thumbnail-1.webp">
+          </a>
           <div class="video-time">
             14:20
           </div>
@@ -91,16 +93,29 @@
   
         <div class="info-row-grid">
           <div class="channel-picture">
-            <img class="profile-picture" src="channel-pictures/channel-1.jpeg" alt="channel-1-pic">
+            <div class="channel-picture-tooltip-container">
+              <img class="profile-picture" src="channel-pictures/channel-1.jpeg" alt="channel-1-pic">
+              <div class="channel-tooltip">
+                <img class="profile-picture-tooltip" src="channel-pictures/channel-1.jpeg" alt="profile-pic-tooltip">
+                <div class="channel-info-tooltip">
+                  <div class="channel-name-tooltip">Marques Brownlee</div>
+                  <div class="channel-subs-tooltip">17.3M subscribers</div>
+                </div>
+              </div>
+            </div>
           </div>
   
           <div class="video-info">
-            <p class="video-title">
-              Talking Tech and AI with Google CEO Sundar Pichai!
-            </p>
-            <p class="video-author">
-              Marques Brownlee
-            </p>
+            <a href="https://www.youtube.com/watch?v=n2RNcPRtAiY" target="_blank" class="video-title-link">
+              <p class="video-title">
+                Talking Tech and AI with Google CEO Sundar Pichai!
+              </p>
+            </a>
+            <a href="https://www.youtube.com/c/mkbhd" target="_blank" class="video-author-link">
+              <p class="video-author">
+                Marques Brownlee
+              </p>
+            </a>
             <p class="video-stats">
               3.4M views &#183; 6 months ago
             </p> 
@@ -110,7 +125,9 @@
   
       <div class="video-preview">
         <div class="thumbnail-row">
-          <img class="thumbnail" src="thumbnails/thumbnail-2.webp">
+          <a href="https://www.youtube.com/watch?v=mP0RAo9SKZk" target="_blank">
+           <img class="thumbnail" src="thumbnails/thumbnail-2.webp">
+          </a>
           <div class="video-time">
             8:22
           </div>
@@ -118,16 +135,29 @@
   
         <div class="info-row-grid">
           <div class="channel-picture">
-            <img class="profile-picture" src="channel-pictures/channel-2.jpeg" alt="channel-2-pic">
+            <div class="channel-picture-tooltip-container">
+              <img class="profile-picture" src="channel-pictures/channel-2.jpeg" alt="channel-2-pic">
+              <div class="channel-tooltip">
+                <img class="profile-picture-tooltip" src="channel-pictures/channel-2.jpeg" alt="profile-pic-tooltip">
+                <div class="channel-info-tooltip">
+                  <div class="channel-name-tooltip">Markiplier</div>
+                  <div class="channel-subs-tooltip">35.4M subscribers</div>
+                </div>
+              </div>
+            </div>
           </div>
   
           <div class="video-info">
-            <p class="video-title">
-              Try Not To Laugh Challenge #9
-            </p>
-            <p class="video-author">
-              Markiplier
-            </p>
+            <a href="https://www.youtube.com/watch?v=mP0RAo9SKZk" target="_blank" class="video-title-link">
+              <p class="video-title">
+                Try Not To Laugh Challenge #9
+              </p>
+            </a>
+            <a href="https://www.youtube.com/c/markiplier" target="_blank" class="video-author-link">
+              <p class="video-author">
+                Markiplier
+              </p>
+            </a>
             <p class="video-stats">
               19M views &#183; 4 years ago
             </p> 
@@ -137,7 +167,9 @@
   
       <div class="video-preview">
         <div class="thumbnail-row">
-          <img class="thumbnail" src="thumbnails/thumbnail-3.webp">
+          <a href="https://www.youtube.com/watch?v=FgjPQQeTh1w" target="_blank">
+            <img class="thumbnail" src="thumbnails/thumbnail-3.webp">
+          </a>
           <div class="video-time">
             9:13
           </div>
@@ -145,16 +177,29 @@
   
         <div class="info-row-grid">
           <div class="channel-picture">
-            <img class="profile-picture" src="channel-pictures/channel-3.jpeg" alt="channel-3-pic">
+            <div class="channel-picture-tooltip-container">
+              <img class="profile-picture" src="channel-pictures/channel-3.jpeg" alt="channel-3-pic">
+              <div class="channel-tooltip">
+                <img class="profile-picture-tooltip" src="channel-pictures/channel-3.jpeg" alt="profile-pic-tooltip">
+                <div class="channel-info-tooltip">
+                  <div class="channel-name-tooltip">SSSniperWolf</div>
+                  <div class="channel-subs-tooltip">34M subscribers</div>
+                </div>
+              </div>
+            </div>
           </div>
   
           <div class="video-info">
-            <p class="video-title">
-              Crazy Tik Toks Taken Moments Before DISASTER
-            </p>
-            <p class="video-author">
-              SSSniperWolf
-            </p>
+            <a href="https://www.youtube.com/watch?v=FgjPQQeTh1w" target="_blank" class="video-title-link">
+              <p class="video-title">
+                Crazy Tik Toks Taken Moments Before DISASTER
+              </p>
+            </a>
+            <a href="https://www.youtube.com/user/SSSniperWolf" target="_blank" class="video-author-link">
+              <p class="video-author">
+                SSSniperWolf
+              </p>
+            </a>
             <p class="video-stats">
               12M views &#183; 1 year ago
             </p> 
@@ -164,7 +209,9 @@
   
       <div class="video-preview">
         <div class="thumbnail-row">
-          <img class="thumbnail" src="thumbnails/thumbnail-4.webp">
+          <a href="https://www.youtube.com/watch?v=094y1Z2wpJg" target="_blank">
+            <img class="thumbnail" src="thumbnails/thumbnail-4.webp">
+          </a>
           <div class="video-time">
             22:09
           </div>
@@ -172,16 +219,29 @@
   
         <div class="info-row-grid">
           <div class="channel-picture">
-            <img class="profile-picture" src="channel-pictures/channel-4.jpeg" alt="channel-4-pic">
+            <div class="channel-picture-tooltip-container">
+              <img class="profile-picture" src="channel-pictures/channel-4.jpeg" alt="channel-4-pic">
+              <div class="channel-tooltip">
+                <img class="profile-picture-tooltip" src="channel-pictures/channel-4.jpeg" alt="profile-pic-tooltip">
+                <div class="channel-info-tooltip">
+                  <div class="channel-name-tooltip">Veritasium</div>
+                  <div class="channel-subs-tooltip">14M subscribers</div>
+                </div>
+              </div>
+            </div>
           </div>
   
           <div class="video-info">
-            <p class="video-title">          
-              The Simplest Math Problem No One Can Solve - Collatz Conjecture
-            </p>
-            <p class="video-author">
-              Veritasium
-            </p>
+            <a href="https://www.youtube.com/watch?v=094y1Z2wpJg" target="_blank" class="video-title-link">
+              <p class="video-title">          
+                The Simplest Math Problem No One Can Solve - Collatz Conjecture
+              </p>
+            </a>
+            <a href="https://www.youtube.com/c/veritasium" target="_blank" class="video-author-link">
+              <p class="video-author">
+                Veritasium
+              </p>
+            </a>
             <p class="video-stats">
               18M views &#183; 4 months ago
             </p> 
@@ -191,7 +251,9 @@
   
       <div class="video-preview">
         <div class="thumbnail-row">
-          <img class="thumbnail" src="thumbnails/thumbnail-5.webp">
+          <a href="https://www.youtube.com/watch?v=86CQq3pKSUw" target="_blank">
+            <img class="thumbnail" src="thumbnails/thumbnail-5.webp">
+          </a>
           <div class="video-time">
             11:17
           </div>
@@ -199,16 +261,29 @@
   
         <div class="info-row-grid">
           <div class="channel-picture">
-            <img class="profile-picture" src="channel-pictures/channel-5.jpeg" alt="channel-5-pic">
+            <div class="channel-picture-tooltip-container">
+              <img class="profile-picture" src="channel-pictures/channel-5.jpeg" alt="channel-4-pic">
+              <div class="channel-tooltip">
+                <img class="profile-picture-tooltip" src="channel-pictures/channel-5.jpeg" alt="profile-pic-tooltip">
+                <div class="channel-info-tooltip">
+                  <div class="channel-name-tooltip">CS Dojo</div>
+                  <div class="channel-subs-tooltip">1.91M subscribers</div>
+                </div>
+              </div>
+            </div>
           </div>
   
           <div class="video-info">
-            <p class="video-title">
-              Kadane's Algorithm to Maximum Sum Subarray Problem
-            </p>
-            <p class="video-author">
-              CS Dojo
-            </p>
+            <a href="https://www.youtube.com/watch?v=86CQq3pKSUw" target="_blank" class="video-title-link">
+              <p class="video-title">
+                Kadane's Algorithm to Maximum Sum Subarray Problem
+              </p>
+            </a>
+            <a href="https://www.youtube.com/c/CSDojo" target="_blank" class="video-author-link">
+              <p class="video-author">
+                CS Dojo
+              </p>
+            </a>       
             <p class="video-stats">
               519K views &#183; 5 years ago
             </p> 
@@ -218,7 +293,9 @@
   
       <div class="video-preview">
         <div class="thumbnail-row">
-          <img class="thumbnail" src="thumbnails/thumbnail-6.webp">
+          <a href="https://www.youtube.com/watch?v=yXWw0_UfSFg" target="_blank">
+            <img class="thumbnail" src="thumbnails/thumbnail-6.webp">
+          </a>
           <div class="video-time">
             19:59
           </div>
@@ -226,16 +303,29 @@
   
         <div class="info-row-grid">
           <div class="channel-picture">
-            <img class="profile-picture" src="channel-pictures/channel-6.jpeg" alt="channel-6-pic">
+            <div class="channel-picture-tooltip-container">
+              <img class="profile-picture" src="channel-pictures/channel-6.jpeg" alt="channel-4-pic">
+              <div class="channel-tooltip">
+                <img class="profile-picture-tooltip" src="channel-pictures/channel-6.jpeg" alt="profile-pic-tooltip">
+                <div class="channel-info-tooltip">
+                  <div class="channel-name-tooltip">MrBeast</div>
+                  <div class="channel-subs-tooltip">173M subscribers</div>
+                </div>
+              </div>
+            </div>
           </div>
   
           <div class="video-info">
-            <p class="video-title">
-              Anything You Can Fit In The Circle I'll Pay For
-            </p>
-            <p class="video-author">
-              MrBeast
-            </p>
+            <a href="https://www.youtube.com/watch?v=yXWw0_UfSFg" target="_blank" class="video-title-link">
+              <p class="video-title">
+                Anything You Can Fit In The Circle I'll Pay For
+              </p>
+            </a>
+            <a href="https://www.youtube.com/channel/UCX6OQ3DkcsbYNE6H8uQQuVA" target="_blank" class="video-author-link">
+              <p class="video-author">
+                MrBeast
+              </p>
+            </a>
             <p class="video-stats">
               141M views &#183; 1 year ago
             </p> 
